<?xml version="1.0"?>
<package>
  <name>carebot_msgs</name>
  <version>2.2.1</version>
  <description>carebot messages, services and actions</description>

  <author email="corvin_zhang@corvin.cn">corvin zhang</author>
  <maintainer email="corvin_zhang@corvin.cn">corvin zhang</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
